--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ html {
   position: relative;
   height: 28rem;
   width: 36rem;
-  background-color: #f333;
+  background-color: #353535;
   display:block;
   border-top: solid 0rem #000;
   text-align: center;
