--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,9 @@ html {
   width: 80%;
   height: 80px;
   padding:20px;
-  background-color: none;
+  background-color: #353535;
+  border-color: #fff;
+color: #fff;
 }
 .light--off .stand {
   background-color: #0c0c0c;
