--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html {
-  font-size: 62.5%;
+  font-size: 70%;
 }
 
 .room {
@@ -104,7 +104,9 @@ font-family: 'Roboto Condensed', sans-serif;
 
 }
 #bt1 {
+  font-family: 'Roboto Condensed', sans-serif;
   width: 80%;
+
   height: 80px;
   padding:20px;
   background-color: #353535;
