--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ html {
 position:absolute;
 top:10%;
 font-size: 36px;
-font-family: 'Roboto Condensed', sans-serif;
+font-family: 'Dosis', sans-serif;
 }
 .stand {
   position: relative;
@@ -104,7 +104,7 @@ font-family: 'Roboto Condensed', sans-serif;
 
 }
 #bt1 {
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Dosis', sans-serif;
   width: 80%;
 
   height: 80px;
